Update image URLs to use HTTPS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <div class="logo" aria-hidden="true"><img src="logo.jpg" alt="Cầu Vồng Travel &amp; Event logo"></div>
+        <div class="logo" aria-hidden="true"><img src="https://cauvongtravel.vercel.app/logo.jpg" alt="Cầu Vồng Travel &amp; Event logo"></div>
         <div>
           <div style="font-weight:700">Cầu Vồng Travel &amp; Event </div>
           <div style="font-size:12px;color:var(--muted)">Khám phá - Trải nghiệm - Gắn kết</div>
@@ -170,7 +170,7 @@
     <div class="grid">
       <!-- Tour 1 -->
       <article class="card card-hover" aria-labelledby="t1">
-        <div class="tour-img" style="background-image:url('du-lich-honson.jpg');background-size:cover;background-position:center"></div>
+        <div class="tour-img" style="background-image:url('https://cauvongtravel.vercel.app/du-lich-honson.jpg');background-size:cover;background-position:center"></div>
         <h3 id="t1" style="margin:10px 0 6px 0">Đảo Phú Quý - 3N2Đ</h3>
         <div class="muted" style="font-size:13px">Khám phá Hòn Tranh, Cột cờ chủ quyền, Núi Cao Cát, chùa Linh Sơn.
         </div>
@@ -189,7 +189,7 @@
 
       <!-- Tour 2 -->
       <article class="card card-hover" aria-labelledby="t2">
-        <div class="tour-img" style="background-image:url('phu-quoc.jpg');background-size:cover;background-position:center"></div>
+        <div class="tour-img" style="background-image:url('https://cauvongtravel.vercel.app/phu-quoc.jpg');background-size:cover;background-position:center"></div>
         <h3 id="t2" style="margin:10px 0 6px 0">Nha Trang - Thiên đường biển xanh</h3>
         <div class="muted" style="font-size:13px">Tham quan bãi biển đẹp, hòa mình vào làn nước trong xanh của Nha
           Trang.</div>
@@ -209,7 +209,7 @@
 
       <!-- Tour 3 -->
       <article class="card card-hover" aria-labelledby="t3">
-        <div class="tour-img" style="background-image:url('sapa.jpg');background-size:cover;background-position:center">
+        <div class="tour-img" style="background-image:url('https://cauvongtravel.vercel.app/sapa.jpg');background-size:cover;background-position:center">
         </div>
         <h3 id="t3" style="margin:10px 0 6px 0">Đà Lạt - Thành phố mùa hoa</h3>
         <div class="muted" style="font-size:13px">Khám phá cao nguyên mộng mơ Đà Lạt – nơi được mệnh danh “Thành phố
@@ -230,7 +230,7 @@
 
       <!-- Tour 4 -->
       <article class="card card-hover" aria-labelledby="t4">
-        <div class="tour-img" style="background-image:url('danang.jpg');background-size:cover;background-position:center"></div>
+        <div class="tour-img" style="background-image:url('https://cauvongtravel.vercel.app/danang.jpg');background-size:cover;background-position:center"></div>
         <h3 id="t3" style="margin:10px 0 6px 0">Đà Nẵng - 4N3Đ</h3>
         <div class="muted" style="font-size:13px">“Con đường Di sản miền Trung” </div>
         <div class="muted" style="font-size:13px">Khám phá động Phong Nha kỳ bí.</div>
@@ -581,7 +581,7 @@
     <div class="container">
       <div style="display:flex;justify-content:space-between;align-items:center;gap:20px;flex-wrap:wrap">
         <div style="display:flex;gap:12px;align-items:center">
-          <div class="logo" style="width:48px;height:48px;border-radius:10px"> <img src="logo.jpg" alt="Cầu Vồng Travel &amp; Event logo"></div>
+          <div class="logo" style="width:48px;height:48px;border-radius:10px"> <img src="https://cauvongtravel.vercel.app/logo.jpg" alt="Cầu Vồng Travel &amp; Event logo"></div>
           <div>
             <div style="font-weight:700">Cầu Vồng Travel &amp; Event </div>
             <div class="muted" style="color:rgba(255,255,255,0.8);font-size:13px">Bảo lưu mọi quyền 2025</div>
