--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 
     function quickBook(id){
         // const message = encodeURIComponent(`Xin chào, tôi muốn hỏi thêm về tour có mã: ${id}`);
-         const fbChatUrl = `https://www.facebook.com/profile.php?id=61583091817297`;
+         const fbChatUrl = `https://www.facebook.com/letan.lqt`;
          window.open(fbChatUrl, '_blank');
     }
 
@@ -697,7 +697,7 @@
     function startChat() {
       // Tích hợp chat thực tế như intercom / tawk.to / zalo etc.
       // const message = encodeURIComponent(`Xin chào Cầu Vồng Travel & Event, tôi cần hỗ trợ.`);
-      const fbChatUrl = `https://www.facebook.com/profile.php?id=61583091817297`;
+      const fbChatUrl = `https://www.facebook.com/letan.lqt`;
       window.open(fbChatUrl, '_blank');
     }
 
