--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           <div>
             <strong>Mạng xã hội</strong>
             <div style="display:flex;gap:10px;margin-top:6px">
-              <a target="_blank" href="https://www.facebook.com/profile.php?id=61583091817297" aria-label="Facebook">Facebook</a>
+              <a target="_blank" href="https://www.facebook.com/letan.lqt" aria-label="Facebook">Facebook</a>
             </div>
           </div>
         </div>
